# Offensive-Rust

./: .gitignore  ReadMe.md
APC-Injection/: Cargo.toml
ArgsSpoofing/: Cargo.toml
ArgsSpoofing/src/: main.rs  peb_structs.rs
Call-DLL/src/: main.rs
CompileTimeHashing/: Cargo.toml
CompileTimeHashing/src/: main.rs
DirectSyscall/: Cargo.toml
DirectSyscall/src/: main.rs
Early_Bird_Injection/: Cargo.toml
Encryption/aesCBC_enc/: Cargo.toml
Encryption/aesGCM_enc/: Cargo.toml
Encryption/chacha_enc/: Cargo.toml
Encryption/rc4_enc/: Cargo.toml  rc4.py
Encryption/xor_enc/: Cargo.toml  xor.py
Execution Control/events/: Cargo.toml
Execution Control/mutex/: Cargo.toml
FunctionStomping/LocalFunctionStomping/: Cargo.toml
Hashing/: Cargo.toml
Hello-DLL/: Cargo.toml
HellsGate/: Cargo.toml  build.rs
HellsGate/src/: hellsgate.asm
Hooks/src/: main.rs
IAT API Resolution/compile_time_hashing/: Cargo.toml
IAT API Resolution/get_mod_handle/: Cargo.toml
IAT API Resolution/get_proc_addr/: Cargo.toml
IndirectSyscall/src/: main.rs
MapViewInject/src/: main.rs
MouseTracker/src/: main.rs
Obfuscation/ipv4_obs/: Cargo.toml
Old Snippets/: main.rs
PELdr/: Cargo.toml
PPidSpoofing/: Cargo.toml
PeParser/: Cargo.toml
Process Injection/thread_hijack/: Cargo.toml
Process Injection/thread_hijack/src/: main.rs
RevShell/: Cargo.toml
Shellcode Storage/resouce_sec/: Cargo.toml
rust basics/: ReadMe.md
shINject-NtAPI/: Cargo.toml
shInject-1/: Cargo.toml
shInject-2/: Cargo.toml
shInject-Remote/: Cargo.toml
web-stager/: poc.c
(+180 files in other folders)
