[package]
name = "thread_hijack"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Wdk_System_SystemInformation",
    "Win32_System_WindowsProgramming",
] }
